objects/District__c.object
<CustomObject>
    <fields>
        <fullName>Country_Name__c</fullName>
        <formula>HYPERLINK(&quot;https://fexleservicesprivatelimit95-dev-ed.lightning.force.com/lightning/o/Country__c/list?filterName=00B5i00000CG2DZEA1&quot;, State_Name__r.Country_Name__r.Name , &quot;_self&quot;) + &apos; -&gt; &apos; + HYPERLINK(&quot;https://fexleservicesprivatelimit95-dev-ed.lightning.force.com/lightning/o/State__c/list?filterName=00B5i00000CG4jvEAD&quot;, State_Name__r.Name , &quot;_self&quot;) + &apos; -&gt; &apos; + HYPERLINK(&quot;https://fexleservicesprivatelimit95-dev-ed.lightning.force.com/lightning/o/District__c/list?filterName=00B5i00000CG4lNEAT&quot;, Name , &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District_Pin_Code__c</fullName>
        <label>District Pin Code</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State_Name__c</fullName>
        <label>State Name</label>
        <referenceTo>State__c</referenceTo>
        <relationshipLabel>Districts</relationshipLabel>
        <relationshipName>Districts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>District</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>District_of_Haryana</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <label>District of Haryana</label>
    </listViews>
    <listViews>
        <fullName>District_of_Rajasthan</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>State_Name__c</field>
            <operation>equals</operation>
            <value>Rajasthan</value>
        </filters>
        <label>District of Rajasthan</label>
    </listViews>
    <listViews>
        <fullName>District_of_Uttar_Pradesh</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>State_Name__c</field>
            <operation>equals</operation>
            <value>Uttar Pradesh</value>
        </filters>
        <label>District of Uttar Pradesh</label>
    </listViews>
    <nameField>
        <label>District  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Districts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>